logs/esteidtray.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/esteidtray'...
Compiling './lib/python3.5/site-packages/esteidtray/applet.py'...
***   File "./lib/python3.5/site-packages/esteidtray/applet.py", line 74
    print "Cardreader added:", reader_name
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/esteidtray/gcardobserver.py'...
***   File "./lib/python3.5/site-packages/esteidtray/gcardobserver.py", line 22
    def update( self, observable, (added_cards, removed_cards) ):
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/esteidtray/greaderobserver.py'...
***   File "./lib/python3.5/site-packages/esteidtray/greaderobserver.py", line 22
    def update( self, observable, (added_readers, removed_readers) ):
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/esteidtray/icons'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
